--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,7 +44,7 @@ en:
     page_entries_info:
       one_page:
         display_entries:
-          zero: "該当商品がありません。"
+          zero: "投稿はまだありません。"
           one: "1件中 1 件を表示"
           other: "%{count}件中 1-%{count}件"
       more_pages:
